--- a/Swig/Swig/pickerCellCollectionViewCell.xib
+++ b/Swig/Swig/pickerCellCollectionViewCell.xib
@@ -14,15 +14,18 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="80" height="85"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VZH-tl-tzu">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="range_background" translatesAutoresizingMaskIntoConstraints="NO" id="AIW-5r-rZC">
                         <rect key="frame" x="10" y="7.5" width="60" height="60"/>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VZH-tl-tzu">
+                        <rect key="frame" x="10" y="7" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="VZH-tl-tzu" secondAttribute="height" multiplier="1:1" id="gfp-Tz-4RJ"/>
                             <constraint firstAttribute="width" constant="60" id="knf-Tq-MKo"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3d-Zt-0cL">
-                        <rect key="frame" x="-20" y="68.5" width="120" height="12"/>
+                        <rect key="frame" x="-20" y="69" width="120" height="12"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -31,9 +34,13 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
+                <constraint firstItem="AIW-5r-rZC" firstAttribute="centerX" secondItem="VZH-tl-tzu" secondAttribute="centerX" id="4rh-mo-3Qa"/>
+                <constraint firstItem="AIW-5r-rZC" firstAttribute="height" secondItem="VZH-tl-tzu" secondAttribute="height" id="7IZ-BF-FC8"/>
+                <constraint firstItem="AIW-5r-rZC" firstAttribute="centerY" secondItem="VZH-tl-tzu" secondAttribute="centerY" id="fmW-aU-oVz"/>
                 <constraint firstAttribute="trailing" secondItem="u3d-Zt-0cL" secondAttribute="trailing" constant="-20" id="gLZ-ah-48h"/>
                 <constraint firstItem="VZH-tl-tzu" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="-5" id="geT-Pn-yf8"/>
-                <constraint firstItem="u3d-Zt-0cL" firstAttribute="top" secondItem="VZH-tl-tzu" secondAttribute="bottom" constant="1" id="pTD-kh-fE4"/>
+                <constraint firstItem="AIW-5r-rZC" firstAttribute="width" secondItem="VZH-tl-tzu" secondAttribute="width" id="jQt-1N-Crb"/>
+                <constraint firstItem="u3d-Zt-0cL" firstAttribute="top" secondItem="VZH-tl-tzu" secondAttribute="bottom" constant="2" id="pTD-kh-fE4"/>
                 <constraint firstItem="VZH-tl-tzu" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="wD5-3E-dMN"/>
                 <constraint firstItem="u3d-Zt-0cL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="-20" id="xNo-Mw-UGm"/>
             </constraints>
@@ -44,4 +51,7 @@
             <point key="canvasLocation" x="534" y="502.5"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="range_background" width="180" height="180"/>
+    </resources>
 </document>
